--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "exif-reader": "^2.0.3",
     "sharp": "^0.34.5"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
 }
